--- a/home/templates/profilebase.html
+++ b/home/templates/profilebase.html
@@ -25,6 +25,7 @@
                     <a id="addressBtn" href="{% url 'addressdisplay' %}" class="btn btn-primary btn-block mb-3">My Address</a>
                     <a id="passwordBtn" href="{% url 'user_password' %}" class="btn btn-primary btn-block mb-3">My Password</a>
                     <a id="ordersBtn" href="{% url 'order_history' %}"  class="btn btn-primary btn-block mb-3"> Order History</a>
+                    <a id="failedBtn" href="{% url 'failed_order_history' %}"  class="btn btn-primary btn-block mb-3"> Pending Payments</a>
                     
                     <a id="walletBtn" class="btn btn-primary btn-block mb-3">My Wallet</a>
                    
@@ -58,6 +59,10 @@
         document.getElementById("ordersBtn").classList.add("active");
     } else if (path.includes("user_wallet/")) {
         document.getElementById("walletBtn").classList.add("active");
+
+    }
+    else if (path.includes("failed_order_history/")) {
+        document.getElementById("failedBtn").classList.add("active");
 
     }
 </script>
