--- a/home/templates/userside/failed_order.html
+++ b/home/templates/userside/failed_order.html
@@ -1,38 +1,48 @@
 {% extends 'main.html'%}
 {% block corousel %}
+<style>
+    .failed-row{
+        height:100px;
+        justify-content: center;
+       
 
+    }  
+</style>
                    
                     <div class="table-responsive">
                         <table id="data-table-basic" class="table table-striped">
                             <thead>
                                 <tr>
-                                    <!-- <th>Order ID</th>  -->
-                                     
+                                    <th>Order ID</th> 
+                                    <th>Order no</th >
                                     <th>Quantity</th>
-                                   <th>Order Price</th>
-                                   <th>Tax/GST</th>
+                                   <!-- <th>Order Price</th>
+                                   <th>Tax/GST</th> -->
                                    <th>Grand Total</th>
                                    <!-- <th>Status</th> -->
                                    <th>Payment Mode</th> 
                                    <th>Payment Status</th>
                                    <th>Date of Ordering</th>
                                   <th></th>
+                                  <th></th>
                                 </tr>
                             </thead>
                             <tbody>
                                 {% for data in order_data%}
-                                <tr>
-                                    <!-- <td>{{data.order.id}}</td> -->
+                                <tr class="failed-row">
+                                    <td>{{data.id}}</td> 
+                                    <td>{{data.tracking_number}}</td>
                                     <td>{{data.total_qnty}}</td>   
-                                    <td >₹{{data.order_total}}</td>
-                                    <td>₹{{data.tax|floatformat:2}}</td>
+                                    <!-- <td >₹{{data.order_total}}</td>
+                                    <td>₹{{data.tax|floatformat:2}}</td> -->
                                     <td>₹{{data.grand_total}}</td>
                                     <!--  <td>{{data.order.status}}</td> -->
                               
                                     <td>{{data.payment_mode}}</td> 
                                     <td>{{data.payment_status}}</td>
                                     <td>{{data.created_at}}</td>
-                                    <th><a>view</a></th>
+                                    <th><a class="btn btn-outline-danger"><b>Cancel Order</b></a></th>
+                                    <th><a class="btn btn-outline-primary" href="{% url 'retry_payment_checkout' data.id %}"><b>Retry Payment</b></a></th>
                                     
                 </tr>           
 
