--- a/home/templates/userside/notika.html
+++ b/home/templates/userside/notika.html
@@ -1,6 +1,6 @@
-{% extends 'main.html' %}
+{% extends 'profilebase.html' %}
 {% load static %}
-{% block corousel %}
+{% block form %}
  <!-- <!doctype html>
 <html class="no-js" lang="">
 
@@ -70,7 +70,7 @@
   
     <!-- Data Table area Start-->
     <div class="col lg-12 align-center">
-    <div class="data-table-area ml-5">
+    <div class="data-table-area ">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -99,13 +99,13 @@
                                     <tr>
                                       {% if data.order.status == "Cancelled" or data.order.status == "Return" %}
                                         <!-- <td>{{data.order.id}}</td> -->
-                                        <td  class="text-danger">{{data.order.payment_status}}</td>  
+                                       
                                           <td  class="text-danger"><s>{{data.order.tracking_number}}</s></td> 
                                         <td class="text-danger"><s>{{data.order.total_qnty}}</s></td>   
                                         
                                         <td class="text-danger"><s>₹{{data.order.grand_total}}</s></td>
                                         {%else%} 
-                                        <td >{{data.order.payment_status}}</td>
+                                      
                                         <td>{{data.order.tracking_number}}</td> 
                                         <td>{{data.order.total_qnty}}</td>   
                                         
@@ -120,6 +120,7 @@
                                         {% else%}
                                         <td class="text-success">{{data.order.status}}</td> 
                                         {% endif %}
+                                        <td  class="text-danger">{{data.order.payment_status}}</td>  
                                         <td>{{data.order.created_at}}</td>
                                         <th><a href="{% url 'my_orders' data.order.id %}">view</a></th>
                                         
@@ -197,4 +198,4 @@
 <!-- </body>
 
 </html> -->
-{% endblock corousel %}
+{% endblock form %}
