--- a/home/templates/userside/wallet.html
+++ b/home/templates/userside/wallet.html
@@ -1,11 +1,18 @@
-{% extends 'main.html' %}
-{% block corousel %}
-
+{% extends 'profilebase.html' %}
+{% load static %}
+{% block profilehead%}<h3>My Wallet</h3>{% endblock profilehead%}
+{% block form %}
+<style>
+    p{
+        font-weight: 700;
+    }
+</style>
+<div class="col-lg-12 d-flex justify-content-center mt-5 mb-5"> <div><img src="{% static 'tem_two/img/wallet.png' %}" class=""style="height:200px;">  </div>  </div>
 {% if transaction %}
-<div class="col-lg-10">
+<div class="col-lg-12">
     <div class="card border-secondary mb-5">
         <div class="card-header bg-secondary border-0 d-flex justify-content-between">
-            <h4 class="font-weight-semi-bold m-0">Transaction ID</h4>
+            <h4 class="font-weight-semi-bold m-0">ID</h4>
              <h4 class="font-weight-semi-bold m-0">Type</h4>
             <h4 class="font-weight-semi-bold m-0">Date</h4>
             <h4 class="font-weight-semi-bold m-0">Amount</h4>
@@ -14,28 +21,37 @@
       
         <div class="card-body">
           {% for transact in transaction %}
-            <div class="d-flex justify-content-between">
+          {% if transact.transaction_type == 'Refund' %}
+            <div class="d-flex justify-content-between text-success">
                 <p>{{transact.id}}</p>
-                <p>{{transact.transaction_type}}</p>
+                <p class="pl-5 ml-2">{{transact.transaction_type}}</p>
                 <p class="">{{transact.timestamp}}</p>
-                <p>{{transact.amount}}</p>
+                <p>+{{transact.amount}}</p>
             </div>
+            {% else%}
+            <div class="d-flex justify-content-between text-danger">
+                <p>{{transact.id}}</p>
+                <p class="pl-5 ml-2">{{transact.transaction_type}}</p>
+                <p class="">{{transact.timestamp}}</p>
+                <p>-{{transact.amount}}</p>
+            </div>
+            {% endif %}
             {% endfor %}
             <hr class="mt-0">
           
         </div>
         <div class="card-footer border-secondary bg-transparent">
             <div class="d-flex justify-content-between mt-2">
-                <h5 class="font-weight-bold">Total</h5>
-                <h5 class="font-weight-bold">{{wishlist.amount}}</h5>
+                <h5 class="font-weight-bold">Wallet Balance</h5>
+                <h5 class="font-weight-bold">{{wallet.balance}}</h5>
             </div>
         </div>
     </div>
     
 </div>
 {% else %}   
-<div class="col " style="height:500px;"><h1 class="text-center mt-5 pt-5">NO WALLET FOR YOU</h1></div>
+<div class="col " style="height:500px;"><div> <img src="{% static 'tem_two/img/money(1).png' %}" class=""style="height:400px;"></div>
 
 {% endif %}
 
-{% endblock corousel %}
+{% endblock form %}
