sales report order correctly fetching

--- a/adminapp/templates/adminside/dashboard.html
+++ b/adminapp/templates/adminside/dashboard.html
@@ -44,9 +44,9 @@
                 <ul class="listnav">
 
                     <li>
-                        <a href="dashboard.html" class="activepage" rel="active" data-show="dashboardlist">
+                        <a href="{% url  'adminapp:sales'%}" class="activepage" rel="active" data-show="dashboardlist">
                             <i class="fa-solid fa-gauge"></i>
-                            My Dashboard
+                            Sales
                         </a>
                     </li>
 
