commit before adding datepicker in custom sales

--- a/adminapp/templates/adminside/sales.html
+++ b/adminapp/templates/adminside/sales.html
@@ -164,7 +164,8 @@
                                                     </div>
                                                 </div>
                                             </div>
-
+                                            <input type="hidden"   name="day" value="custom">
+                                                  
                                             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                                                 <div class="nk-int-mk">
                                                     <h2>To Date</h2>
