--- a/adminapp/templates/adminside/sales.html
+++ b/adminapp/templates/adminside/sales.html
@@ -151,34 +151,27 @@
                                         <div class="row custom-sale-form" style="display:none">
                                         <form action="{% url 'adminapp:sales' %}" method="post">
                                             {% csrf_token %}
-                                            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                                                <div class="nk-int-mk">
-                                                    <h2>From Date</h2>
-                                                </div>
-                                                <div class="form-group ic-cmp-int">
-                                                    <div class="form-ic-cmp">
-                                                        <i class="notika-icon notika-calendar"></i>
-                                                    </div>
-                                                    <div class="nk-int-st">
-                                                        <input type="text" class="form-control"  name="start_date" placeholder="yyyy/mm/dd">
+                                           
+                                                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                                                    <div class="form-group nk-datapk-ctm form-elet-mg" id="data_1">
+                                                        <label>From</label>
+                                                        <div class="input-group date nk-int-st">
+                                                            <span class="input-group-addon"></span>
+                                                            <input type="text" class="form-control" name="start_date" value="03/19/2018">
+                                                        </div>
                                                     </div>
                                                 </div>
-                                            </div>
+                                                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                                                    <div class="form-group nk-datapk-ctm form-elet-mg" id="data_1">
+                                                        <label>To</label>
+                                                        <div class="input-group date nk-int-st">
+                                                            <span class="input-group-addon"></span>
+                                                            <input type="text" class="form-control" name="end_date" value="03/19/2018">
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             <input type="hidden"   name="day" value="custom">
-                                                  
-                                            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                                                <div class="nk-int-mk">
-                                                    <h2>To Date</h2>
-                                                </div>
-                                                <div class="form-group ic-cmp-int">
-                                                    <div class="form-ic-cmp">
-                                                        <i class="notika-icon notika-calendar"></i>
-                                                    </div>
-                                                    <div class="nk-int-st">
-                                                        <input type="text" class="form-control" name="end_date"  placeholder="yyyy/mm/dd">
-                                                    </div>
-                                                </div>
-                                            </div>
+                                                
 
                                            
                                             <div class="col-lg-4 col-md-4 col-sm-3 col-xs-12">
@@ -193,72 +186,8 @@
                                 
                             </div>
                         </div>
-                        <div class="row d-flex justify-content-evenly">
-                            <div class="col-lg-2 col-md-3 col-sm-3 col-xs-12">
-                                <div class="invoice-hs">
-                                    <span>Total Orders</span>
-                                    <h2>{{orders.id}}</h2>
-                                </div>
-                            </div>
-                            <div class="col-lg-2 col-md-3 col-sm-3 col-xs-12">
-                                <div class="invoice-hs date-inv sm-res-mg-t-30 tb-res-mg-t-30 tb-res-mg-t-0">
-                                    <span>Total items</span>
-                                    <h2>{{orders.created_at}}</h2>
-                                </div>
-                            </div>
-                            <div class="col-lg-2 col-md-3 col-sm-3 col-xs-12">
-                                <div class="invoice-hs date-inv sm-res-mg-t-30 tb-res-mg-t-30 tb-res-mg-t-0">
-                                    <span>Order Amount</span>
-                                    <h2>{{orders.created_at}}</h2>
-                                </div>
-                            </div>
-                            <div class="col-lg-2 col-md-3 col-sm-3 col-xs-12">
-                                <div class="invoice-hs wt-inv sm-res-mg-t-30 tb-res-mg-t-30 tb-res-mg-t-0">
-                                    <span>Total Discount</span>
-                                    <h2>{{orders.total_qnty}}</h2>
-                                </div>
-                            </div>
-                            <div class="col-lg-2 col-md-3 col-sm-3 col-xs-12">
-                                <div class="invoice-hs gdt-inv sm-res-mg-t-30 tb-res-mg-t-30 tb-res-mg-t-0">
-                                    <span>Grand Total</span>
-                                    <h2>{{orders.grand_total}}</h2>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                <div class="invoice-sp">
-                                    <table class="table table-hover">
-                                        <thead>
-                                            <tr>
-                                                <th>#</th>
-                                                <th>Item Name</th>
-                                                <th>Size</th>
-                                                <th>Color</th> 
-                                                <th>Unit Price</th>
-                                                <th>Quantity</th>
-                                                <th>Total</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            {% for product in order_products%}
-                                        
-                                            <tr>
-                                                <td><img src="{{product.image_url}}" style="height: 100px;"></td>
-                                                <td>{{product.product_name}}</td>
-                                                <td>{{product.size}}</td>
-                                                <td>{{product.color}}</td>
-                                                <td>{{product.individual_price}}</td>
-                                                <td>{{product.quantity}}</td>
-                                                <td>{{product.total_price}}</td>
-                                            </tr>
-                                            {% endfor %}
-                                            
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
+                     
+                       
                         <!-- <div class="row">
                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                 <div class="invoice-ds-int">
