--- a/adminapp/templates/adminside/salesview.html
+++ b/adminapp/templates/adminside/salesview.html
@@ -109,48 +109,60 @@
                             <div class="col-lg-2 col-md-3 col-sm-3 col-xs-12">
                                 <div class="invoice-hs date-inv sm-res-mg-t-30 tb-res-mg-t-30 tb-res-mg-t-0">
                                     <span>Order Amount</span>
-                                    <h2>{{grand_total|floatformat:2}}</h2>
+                                    <h2>₹{{grand_total|floatformat:2}}</h2>
                                 </div>
                             </div>
                             <div class="col-lg-2 col-md-3 col-sm-3 col-xs-12">
                                 <div class="invoice-hs wt-inv sm-res-mg-t-30 tb-res-mg-t-30 tb-res-mg-t-0">
                                     <span>Total Discount</span>
-                                    <h2>{{coupon_total|floatformat:2}}</h2>
+                                    <h2>₹{{coupon_total|floatformat:2}}</h2>
                                 </div>
                             </div>
                             <div class="col-lg-2 col-md-3 col-sm-3 col-xs-12">
                                 <div class="invoice-hs gdt-inv sm-res-mg-t-30 tb-res-mg-t-30 tb-res-mg-t-0">
                                     <span>Grand Total</span>
-                                    <h2>{{discount_grand_total|floatformat:2}}</h2>
+                                    <h2>₹{{discount_grand_total|floatformat:2}}</h2>
                                 </div>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                <div class="invoice-sp">
-                                    <table class="table table-hover">
+                        </div> 
+                        <div class="data-table-area">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                        <div class="data-table-list">
+                                            <div class="table-responsive">
+                                    <table class=" table-hover table-striped"id="data-table-basic" >
                                         <thead>
                                             <tr>
-                                                <th>#</th>
-                                                <th>Item Name</th>
-                                                <th>Size</th>
-                                                <th>Color</th> 
-                                                <th>Unit Price</th>
-                                                <th>Quantity</th>
-                                                <th>Total</th>
+                                                <th>id</th>
+                                                <th>Order ID</th>
+                                                <th>Order Date</th>
+                                                <th>Total Units</th>
+                                                <th>Total Price</th> 
+                                                <th>Discount</th>
+                                                <th>Grand Total</th>
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            {% for product in order_products%}
+                                            {% for order in orders%}
                                         
                                             <tr>
-                                                <td><img src="{{product.image_url}}" style="height: 100px;"></td>
-                                                <td>{{product.product_name}}</td>
-                                                <td>{{product.size}}</td>
-                                                <td>{{product.color}}</td>
-                                                <td>{{product.individual_price}}</td>
-                                                <td>{{product.quantity}}</td>
-                                                <td>{{product.total_price}}</td>
+                                              <td>{{order.id}}</td>
+                                                <td>{{order.tracking_number}}</td>
+                                                <td>{{order.created_at}}</td>
+                                                <td>{{order.total_qnty}}</td>
+                                                <td>₹{{order.grand_total}}</td>
+                                                {% if order.applied_coupon %}
+                                                {% if order.applied_coupon.discount_amount%}
+                                                <td>₹{{order.applied_coupon.discount_amount}}</td>
+                                               {% else %}
+                                               <td>{{order.applied_coupon.discount_percentage}}%</td>
+                                               {% endif %}
+                                                <td>₹{{order.discount_grand_total}}</td>
+                                                {% else %}
+                                                <td>-</td>
+                                                <td>₹{{order.grand_total}}</td>
+                                                {% endif %}
                                             </tr>
                                             {% endfor %}
                                             
@@ -159,6 +171,10 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+                               
                         <!-- <div class="row">
                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                 <div class="invoice-ds-int">
