pdf download added

--- a/adminapp/templates/adminside/salesview.html
+++ b/adminapp/templates/adminside/salesview.html
@@ -81,13 +81,13 @@
                     <div class="invoice-wrap">
                         <div class="invoice-img">
                             {% if day == "day" %}
-                            <h1 style="color: white;">DAILY SALES REPORT</h1><br><h3 style="color: white;">({{start_date}})</h3>
+                            <h1 style="color: white; font-family: Verdana, Geneva, Tahoma, sans-serif;">DAILY SALES REPORT</h1><br><h3 style="color: white;">({{start_date}})</h3>
                     {% elif day == "month" %}
-                    <h1 style="color: white;">MONTHLY SALES REPORT</h1><br><h3 style="color: white;">({{start_date}})-({{end_date}})</h3>
+                    <h1 style="color: white; font-family: Verdana, Geneva, Tahoma, sans-serif;">MONTHLY SALES REPORT</h1><br><h3 style="color: white;">({{start_date}})-({{end_date}})</h3>
                     {% elif day == "week" %}
-                    <h1 style="color: white;">WEEKLY SALES REPORT</h1><br><h3 style="color: white;">({{start_date}})-({{end_date}})</h3>
+                    <h1 style="color: white;font-family: Verdana, Geneva, Tahoma, sans-serif;">WEEKLY SALES REPORT</h1><br><h3 style="color: white;">({{start_date}})-({{end_date}})</h3>
                     {% elif day == "custom" %}
-                    <h1 style="color: white;">SALES REPORT</h1><br><h3 style="color: white;">({{start_date}})-({{end_date}})</h3>
+                    <h1 style="color: white;font-family: Verdana, Geneva, Tahoma, sans-serif;">SALES REPORT</h1><br><h3 style="color: white;">({{start_date}})-({{end_date}})</h3>
                   
                   
                     {% endif %}
