--- a/adminapp/templates/adminside/sales.html
+++ b/adminapp/templates/adminside/sales.html
@@ -73,6 +73,16 @@
         <script src="{% static 'js/vendor/modernizr-2.8.3.min.js' %}"></script>
 {% endblock extra_link %}
 {% block userlist %}
+<style>
+    #salesdiv{
+        border-radius: 20px;
+        background-color: rgb(88, 200, 150);
+        border-width: 3px;
+        height: 100px;
+        align-items: center;
+        justify-content: center;
+    }
+</style>
        <!-- Start Status area -->
        <div class="invoice-area">
         <div class="container">
@@ -84,14 +94,14 @@
                         </div>
                         <div class="invoice-hds-pro">
                             <div class="row">
-                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
                                     <div class="form-example-wrap mg-t-30">
                                         <div class="cmp-tb-hd cmp-int-hd">
                                             <h2>SALES REPORT</h2>
                                         </div>
 
 
-                                        <div class="row mb-5  d-flex justify-content-start ">
+                                        <div class="row mb-5  d-flex justify-content-start " id="salesdiv">
                                             <!-- todays sale form start here -->
                                             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                                                 <form action="{% url 'adminapp:sales' %}" method="post">
@@ -181,6 +191,14 @@
                                             </div>
                                         </form>
                                         </div>
+
+
+                                        <div class="invoice-img">
+                                            <a href="{% url 'adminapp:download_pdf' %}" class="text-white">download pdf</a>
+                                        </div>
+
+                                  
+
                                     </div>
                                 </div>
                                 
@@ -200,6 +218,92 @@
                                 </div>
                             </div>
                         </div> -->
+
+
+
+
+                        <!-- <div class="row d-flex justify-content-evenly mt-5">
+                            <div class="col-lg-2 col-md-3 col-sm-3 col-xs-12">
+                                <div class="invoice-hs">
+                                    <span>Total Orders</span>
+                                    <h2>{{total_orders}}</h2>
+                                </div>
+                            </div>
+                            <div class="col-lg-2 col-md-3 col-sm-3 col-xs-12">
+                                <div class="invoice-hs date-inv sm-res-mg-t-30 tb-res-mg-t-30 tb-res-mg-t-0">
+                                    <span>Total items</span>
+                                    <h2>{{total_items}}</h2>
+                                </div>
+                            </div>
+                            <div class="col-lg-2 col-md-3 col-sm-3 col-xs-12">
+                                <div class="invoice-hs date-inv sm-res-mg-t-30 tb-res-mg-t-30 tb-res-mg-t-0">
+                                    <span>Order Amount</span>
+                                    <h2>₹{{grand_total|floatformat:2}}</h2>
+                                </div>
+                            </div>
+                            <div class="col-lg-2 col-md-3 col-sm-3 col-xs-12">
+                                <div class="invoice-hs wt-inv sm-res-mg-t-30 tb-res-mg-t-30 tb-res-mg-t-0">
+                                    <span>Total Discount</span>
+                                    <h2>₹{{coupon_total|floatformat:2}}</h2>
+                                </div>
+                            </div>
+                            <div class="col-lg-2 col-md-3 col-sm-3 col-xs-12">
+                                <div class="invoice-hs gdt-inv sm-res-mg-t-30 tb-res-mg-t-30 tb-res-mg-t-0">
+                                    <span>Grand Total</span>
+                                    <h2>₹{{discount_grand_total|floatformat:2}}</h2>
+                                </div>
+                            </div>
+                        </div> 
+                        <div class="data-table-area">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                        <div class="data-table-list">
+                                            <div class="table-responsive">
+                                    <table class=" table-hover table-striped"id="data-table-basic" >
+                                        <thead>
+                                            <tr>
+                                                <th>id</th>
+                                                <th>Order ID</th>
+                                                <th>Order Date</th>
+                                                <th>Total Units</th>
+                                                <th>Total Price</th> 
+                                                <th>Discount</th>
+                                                <th>Grand Total</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            {% for order in orders%}
+                                        
+                                            <tr>
+                                              <td>{{order.id}}</td>
+                                                <td>{{order.tracking_number}}</td>
+                                                <td>{{order.created_at}}</td>
+                                                <td>{{order.total_qnty}}</td>
+                                                <td>₹{{order.grand_total}}</td>
+                                                {% if order.applied_coupon %}
+                                                {% if order.applied_coupon.discount_amount%}
+                                                <td>₹{{order.applied_coupon.discount_amount}}</td>
+                                               {% else %}
+                                               <td>{{order.applied_coupon.discount_percentage}}%</td>
+                                               {% endif %}
+                                                <td>₹{{order.discount_grand_total}}</td>
+                                                {% else %}
+                                                <td>-</td>
+                                                <td>₹{{order.grand_total}}</td>
+                                                {% endif %}
+                                            </tr>
+                                            {% endfor %}
+                                            
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> -->
+
                     </div>
                 </div>
             </div>
