pdf just dou=ing

--- a/adminapp/templates/adminside/salesview.html
+++ b/adminapp/templates/adminside/salesview.html
@@ -125,6 +125,7 @@
                                 </div>
                             </div>
                         </div> 
+                        <a href="{% url 'adminapp:download_pdf'%}">download sales report</a>
                         <div class="data-table-area">
                             <div class="container">
                                 <div class="row">
