--- a/home/templates/userside/detail.html
+++ b/home/templates/userside/detail.html
@@ -78,7 +78,7 @@
                     </div> -->
                     <form id="sizeForm">
                     <h3 class="font-weight-semi-bold mb-4">{{ product.pr_name }}</h3>
-
+                  <input type="hidden" name="product" value="{{product.id}}" id="product-{{product.id}}">
                     <div >
                         <div class="d-flex mb-3">
                         <p class="text-dark font-weight-medium mb-0 mr-3">Color</p>
