commit before changing product detail page

--- a/home/templates/userside/empty_failed_order_history.html
+++ b/home/templates/userside/empty_failed_order_history.html
@@ -1,10 +1,10 @@
-{% extends 'main.html'%}
+{% extends 'profilebase.html'%}
 {% load static%}
-{% block corousel %}
+{% block form %}
 
 <style>
 .comment {
-    height:300px;
+    height:200px;
     position: absolute;
     top: 20%; /* Position the button 50% from the top of the container */
     left: 33%; /* Position the button 50% from the left of the container */
@@ -14,21 +14,21 @@
 }
 .button{
     position: absolute;
-    top: 17%; /* Position the button 50% from the top of the container */
-    left: 33%; /* Position the button 50% from the left of the container */
+    top: 75%; /* Position the button 50% from the top of the container */
+    left: 50%; /* Position the button 50% from the left of the container */
     transform: translate(-50%, -50%); /* Center the button within the container */
     border-radius: 20px;
     z-index: 10;
-    background-color: antiquewhite;
+    
     font-weight: 700;
 }
 
 
 </style>
 <div class="col-lg-12 col-md-12 d-flex justify-content-center align-items-center" style="height:500px;">
-<div> <img src="{% static 'tem_two/img/money.png' %}" class=""style="height:400px;">
+<div> <img src="{% static 'tem_two/img/check.png' %}" class=""style="height:200px;">
 <!-- <img class="comment"src="{% static 'tem_two/img/customer-service.png' %}"> -->
-<a class="button btn btn-sm" href="{% url 'shop' %}">NO MORE PENDING PAYMENTS</a>
+<a class="button btn btn-sm btn-outline-success" href="{% url 'shop' %}">NO MORE PENDING PAYMENTS</a>
 </div></div>
 
 
@@ -37,4 +37,4 @@
 
 
 
-{% endblock corousel %}
+{% endblock form %}
