--- a/home/templates/userside/wallet.html
+++ b/home/templates/userside/wallet.html
@@ -2,9 +2,15 @@
 {% load static %}
 {% block profilehead%}<h3>My Wallet</h3>{% endblock profilehead%}
 {% block form %}
-
-<div class="col-lg-12 d-flex justify-content-center mt-5 mb-5"> <div><img src="{% static 'tem_two/img/wallet.png' %}" class=""style="height:200px;">  </div>  </div>
+<style>
+    .empty-wallet{
+        display: flex;
+        justify-content: center;
+    }
+</style>
 {% if transaction %}
+<div class="col-lg-12 d-flex justify-content-center mt-5 mb-5"> <div><img src="{% static 'tem_two/img/wallet.png' %}" class=""style="height:200px;">  </div>  </div>
+
 <div class="col-lg-12">
     <div class="card border-secondary mb-5">
         <div class="card-header bg-secondary border-0 d-flex justify-content-between">
@@ -49,7 +55,7 @@
     
 </div>
 {% else %}   
-<div class="col " style="height:500px;"><div> <img src="{% static 'tem_two/img/money(1).png' %}" class=""style="height:400px;"></div>
+<div class="col empty-wallet"style="height:500px;"><div> <img src="{% static 'tem_two/img/money.png' %}" ></div>
 
 {% endif %}
 
